--- a/TODO
+++ b/TODO
@@ -1,9 +1,73 @@
 http://amix.dk/vim/vimrc.html
 http://dougireton.com/blog/2013/02/23/layout-your-vimrc-like-a-boss/
-
 https://github.com/sorin-ionescu/prezto
-
 https://github.com/rtomayko/shocco/blob/master/shocco.sh#commit
 https://github.com/dasch/rails-complete
-
 https://pypi.python.org/pypi/Stallion
+http://www.git-legit.org/
+
+#===============================================================================
+# Packages
+#===============================================================================
+apt-get => APT_CONFIG
+cp,mv => SIMPLE_BACKUP_SUFFIX VERSION_CONTROL
+perlrun
+ruby
+python
+more => MORE
+sudo => SUDO_ASKPASS SUDO_EDITOR SUDO_PROMPT SUDO_PS1
+tar => TAR_OPTIONS
+gzip => GZIP
+bzip => BZIP2 BZIP
+unzip => UNZIP
+crontab => CRONTAB_NOHEADER
+df => BLOCK_SIZE
+hub => GITHUB_USER GITHUB_PASSWORD
+
+#===============================================================================
+# Completion
+#===============================================================================
+rvm
+dropbox
+gem
+    - https://github.com/mernen/completion-ruby
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/rubygems
+rake
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/rake
+pip
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/pip
+maven
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/maven
+npm
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/npm
+hub
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/hub
+ipython
+    - https://github.com/thomasf/dotfiles-thomasf-base/blob/master/.config-base/bash/completion.d/ipython
+
+#===============================================================================
+# Git
+#===============================================================================
+## @link https://github.com/clauswitt/dotfiles/blob/master/git/gitconfig
+
+# https://github.com/wadey/dotfiles/blob/master/gitconfig
+# check if a branch has been merged into the current HEAD
+#  if on master, "git merged topic" will tell you if topic
+#  has been merged
+merged = !sh -c 'git rev-list HEAD | grep $(git rev-parse $0)'
+
+# show a list of branches sorted by time of last commit
+brage = "!f() { git for-each-ref --sort=committerdate refs/heads $1  --format=\"%(refname:short)\" ; }; g() { for C in $(f $1) ; do git show -s --pretty=format:\"%Cgreen%ci %Cblue%cr%Creset  $C\" \"$C\" -- ; done; }; g "
+
+# show remote branches as well
+brageall = !git brage refs/remotes
+
+# show a list of tags sorted by when they were tagged
+tagage = "!sh -c 'git for-each-ref --sort=taggerdate refs/tags --format=\"%(refname:short)\"'"
+
+# show a list of every branch and show their latests commit, sorted by last commit
+brlog = "!sh -c 'for C in $(git for-each-ref --sort=committerdate refs/heads --format=\"%(refname:short)\") ; do git show  -s --pretty=format:\"%Cgreen%ci %Cblue%cr%Creset  $C\" \"$C\" -- ; git show --stat -s $C ; echo; done'"
+
+# show a list of last change in each branch of a given path
+# roly poly fileheads
+fileheads = "!sh  -c 'for C in $(git for-each-ref --sort=committerdate refs/heads --format=\"%(refname:short)\"| tac) ; do git show -s --pretty=format:\"%Cgreen%ci %Cblue%cr%Creset  $C\" \"$C\" -- ; git log -p -1 $C -- $0; echo; done'"
