--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ home/vim/plugin/list.vim
 home/vim/plugin/mouse.vim
 home/vim/plugin/move.vim
 home/vim/plugin/search.vim
+home/vim/plugin/syntastic.vim
 home/vim/plugin/temp.vim
 home/vim/plugin/visual.vim
 home/vimrc
