--- a/TODO
+++ b/TODO
@@ -12,6 +12,8 @@ home/vim/plugin/temp.vim
 home/vim/plugin/visual.vim
 home/vimrc
 src/environment/pyenv.sh (see https://github.com/pyenv/pyenv#advanced-configuration)
+home/minikube/config/config.json
+home/kube/config
 
 # ~/.vimrc
 https://github.com/adampetrovic/dotfiles/tree/master/vim
