Add everything to TODO:

--- a/TODO
+++ b/TODO
@@ -1,18 +1,138 @@
+.flake8
+.gitignore
+.gitmodules
+.pylintrc
+.rubocop.yml
+.travis.yml
+.yamllint
+Makefile
+dotfiles.sublime-project
+home/bash_logout
+home/bash_profile
+home/config/composer/composer.json
+home/config/composer/composer.lock
+home/config/composer/config.json
+home/config/gtk-3.0/bookmarks
+home/config/htop/.editorconfig
+home/config/htop/htoprc
+home/config/sublime-text-3/.editorconfig
+home/config/sublime-text-3/.gitignore
+home/config/sublime-text-3/Packages/User/ApplySyntax.sublime-settings
+home/config/sublime-text-3/Packages/User/Base File.sublime-settings
+home/config/sublime-text-3/Packages/User/Default (Linux).sublime-keymap
+home/config/sublime-text-3/Packages/User/Distraction Free.sublime-settings
+home/config/sublime-text-3/Packages/User/EditorConfig.sublime-settings
+home/config/sublime-text-3/Packages/User/Git.sublime-settings
+home/config/sublime-text-3/Packages/User/GitGutter.sublime-settings
+home/config/sublime-text-3/Packages/User/Package Control.sublime-settings
+home/config/sublime-text-3/Packages/User/Preferences.sublime-settings
+home/config/sublime-text-3/Packages/User/Pretty JSON.sublime-settings
+home/config/terminator/config
+home/curlrc
+home/dotfilesrc
+home/editrc
+home/gemrc
+home/gitconfig
+home/gitconfig-atlassian
+home/gitignore
+home/hushlogin
+home/inputrc
+home/irbrc
+home/minikube/config/config.json
+home/pythonrc
+home/rvmrc
+home/screenrc
+home/ssh/authorized_keys
+home/ssh/config
+home/sudo_as_admin_successful
+home/venv/requirements.in
+home/venv/requirements.txt
 home/vim/after/ftplugin/gitcommit.vim
 home/vim/bundle/Vundle.vim
 home/vim/plugin/buffer.vim
+home/vim/plugin/clipboard.vim
+home/vim/plugin/history.vim
+home/vim/plugin/indent.vim
 home/vim/plugin/list.vim
-home/vim/plugin/mouse.vim
+home/vim/plugin/macros.vim
 home/vim/plugin/move.vim
 home/vim/plugin/nerdtree.vim
+home/vim/plugin/other.vim
 home/vim/plugin/search.vim
+home/vim/plugin/statusline.vim
 home/vim/plugin/sudo.vim
 home/vim/plugin/syntastic.vim
 home/vim/plugin/temp.vim
+home/vim/plugin/theme.vim
 home/vim/plugin/visual.vim
 home/vimrc
-src/environment/pyenv.sh (see https://github.com/pyenv/pyenv#advanced-configuration)
-home/minikube/config/config.json
+home/wgetrc
+src/bashrc.bash
+src/completion/arcanist.bash
+src/completion/awscli.sh
+src/completion/bash-completion.bash
+src/completion/ec2-scripts.bash
+src/completion/golang.bash
+src/completion/kubectl.bash
+src/completion/minikube.bash
+src/completion/nvm.bash
+src/completion/pip.bash
+src/completion/ruby.bash
+src/completion/rvm.sh
+src/completion/symfony.bash
+src/completion/terraform.bash
+src/completion/velero.bash
+src/config/cdpath.bash
+src/config/detect.sh
+src/config/fignore.bash
+src/config/globignore.bash
+src/config/history.bash
+src/config/hostfile.bash
+src/config/opts.bash
+src/config/opts.sh
+src/config/prompt.bash
+src/environment/bin.sh
+src/environment/browser.sh
+src/environment/composer.sh
+src/environment/ec2-scripts.sh
+src/environment/editor.sh
+src/environment/gcc.sh
+src/environment/golang.sh
+src/environment/krew.sh
+src/environment/less.sh
+src/environment/lesspipe.sh
+src/environment/local.sh
+src/environment/locale.sh
+src/environment/nvm.sh
+src/environment/pager.sh
+src/environment/pyenv.sh
+src/environment/python.sh
+src/environment/rvm.sh
+src/environment/umask.sh
+src/environment/virtualenv.sh
+src/environment/xdg.sh
+src/functions/clipboard.sh
+src/functions/coreutils.sh
+src/functions/grep.sh
+src/functions/ldap.sh
+src/functions/ls.sh
+src/functions/open.sh
+src/functions/path.sh
+src/functions/settitle.sh
+src/functions/shrug.sh
+src/functions/ssh-add-key.sh
+src/functions/upgrade-all.sh
+src/functions/utf8-encode.sh
+src/functions/whatismyip.sh
+src/functions/whence.sh
+src/functions/wsl.sh
+src/modules/completion-ruby
+src/modules/go-pkg-complete
+src/profile.sh
+src/setup/cloudtoken.sh
+src/setup/ssh.sh
+tools/compiler
+tools/loader
 home/kube/config
 
 # ~/.vimrc
