--- a/TODO
+++ b/TODO
@@ -209,3 +209,4 @@ https://github.com/jay0lee/GAM
 - `/etc/apt/sources.list`
 - Snap
 - ngrok
+- Is there something better than Shell Script Loader?
