--- a/TODO
+++ b/TODO
@@ -125,6 +125,8 @@ src/profile.sh
 src/setup/cloudtoken.sh
 src/setup/ssh.sh
 home/kube/config
+test/helper.bash
+test/functions/shrug.bats
 
 # ~/.vimrc
 https://github.com/adampetrovic/dotfiles/tree/master/vim
