Add `parallel` to TODO

--- a/TODO
+++ b/TODO
@@ -213,3 +213,4 @@ https://github.com/jay0lee/GAM
 - Is there something better than Shell Script Loader?
 - Dropbox
 - https://mosh.org/
+- `parallel`
