--- a/TODO
+++ b/TODO
@@ -224,3 +224,4 @@ https://github.com/jay0lee/GAM
 - https://github.com/cli/cli
 - https://github.com/lastpass/lastpass-cli
 - https://github.com/sharkdp/bat
+- `agrep`
