Add cloudtoken config to TODO

--- a/TODO
+++ b/TODO
@@ -227,3 +227,4 @@ https://github.com/jay0lee/GAM
 - `agrep`
 - https://github.com/go-jira/jira
 - https://docs.aws.amazon.com/systems-manager/latest/userguide/session-manager-working-with-install-plugin.html
+- `~/.config/cloudtoken/config.yaml`
