--- a/TODO
+++ b/TODO
@@ -1,18 +1,26 @@
+.editorconfig
 .flake8
+.gitignore
 .gitmodules
 .pylintrc
 .rubocop.yml
 .travis.yml
 .yamllint
 Makefile
-home/aws
+dotfiles.sublime-project
+home/.gitignore
 home/bash_logout
 home/bash_profile
 home/config/atlassian/atlas/atlas.toml
 home/config/atlassian/atlas/plugins-installed.toml
 home/config/bleachbit/bleachbit.ini
+home/config/cloudtoken/config.yaml
 home/config/gtk-3.0/bookmarks
+home/config/helm/repositories.yaml
+home/config/htop/.editorconfig
 home/config/htop/htoprc
+home/config/sublime-text-3/.editorconfig
+home/config/sublime-text-3/.gitignore
 home/config/sublime-text-3/Packages/User/ApplySyntax.sublime-settings
 home/config/sublime-text-3/Packages/User/Base File.sublime-settings
 home/config/sublime-text-3/Packages/User/Default (Linux).sublime-keymap
@@ -34,6 +42,12 @@ home/gitignore
 home/hushlogin
 home/inputrc
 home/irbrc
+home/jira.d/config.yml
+home/jira.d/instances/hello.yml
+home/jira.d/instances/ops.yml
+home/minikube/.editorconfig
+home/minikube/config/config.json
+home/psqlrc
 home/pythonrc
 home/rvmrc
 home/screenrc
@@ -41,6 +55,7 @@ home/ssh/authorized_keys
 home/ssh/config
 home/sudo_as_admin_successful
 home/venv/requirements.in
+home/venv/requirements.txt
 home/vim/after/ftplugin/gitcommit.vim
 home/vim/bundle/Vundle.vim
 home/vim/plugin/buffer.vim
@@ -108,7 +123,9 @@ src/functions/clipboard.sh
 src/functions/coreutils.sh
 src/functions/grep.sh
 src/functions/ldap.sh
+src/functions/lowercase-extensions.sh
 src/functions/ls.sh
+src/functions/open.sh
 src/functions/path.sh
 src/functions/say.sh
 src/functions/settitle.sh
@@ -124,10 +141,13 @@ src/modules/go-pkg-complete
 src/profile.sh
 src/setup/cloudtoken.sh
 src/setup/ssh.sh
-home/kube/config
-test/helper.bash
 test/environment/editor.bats
 test/functions/open.bats
+test/helper.bash
+tools/bats-assert
+tools/bats-mock
+tools/bats-support
+tools/compiler
 
 # ~/.vimrc
 https://github.com/adampetrovic/dotfiles/tree/master/vim
