--- a/TODO
+++ b/TODO
@@ -79,6 +79,7 @@ src/completion/atlas.sh
 src/completion/awscli.sh
 src/completion/bash-completion.bash
 src/completion/ec2-scripts.bash
+src/completion/fluxctl.bash
 src/completion/golang.bash
 src/completion/helm.bash
 src/completion/kubectl.bash
