--- a/TODO
+++ b/TODO
@@ -245,3 +245,18 @@ https://github.com/jay0lee/GAM
 - https://docs.aws.amazon.com/systems-manager/latest/userguide/session-manager-working-with-install-plugin.html
 - `~/.config/cloudtoken/config.yaml`
 - https://github.com/minfrin/retry
+
+# Krew plugins
+- https://github.com/ahmetb/kubectl-tree
+- https://github.com/rikatz/kubepug
+- https://github.com/yashbhutwala/kubectl-df-pv
+- https://github.com/emirozer/kubectl-doctor
+- https://github.com/MnrGreg/kubectl-node-restart
+- https://github.com/replicatedhq/outdated
+- https://github.com/etopeter/kubectl-view-utilization
+- https://github.com/davidB/kubectl-view-allocations
+- https://github.com/boz/kail
+- https://github.com/zegl/kube-score
+- https://github.com/derailed/popeye
+- https://github.com/itaysk/kubectl-neat
+- https://github.com/johanhaleby/kubetail
