Add keybase to TODO

--- a/TODO
+++ b/TODO
@@ -245,6 +245,7 @@ https://github.com/jay0lee/GAM
 - https://docs.aws.amazon.com/systems-manager/latest/userguide/session-manager-working-with-install-plugin.html
 - `~/.config/cloudtoken/config.yaml`
 - https://github.com/minfrin/retry
+- Keybase
 
 # Krew plugins
 - https://github.com/ahmetb/kubectl-tree
