--- a/TODO
+++ b/TODO
@@ -262,3 +262,6 @@ https://github.com/jay0lee/GAM
 - https://github.com/derailed/popeye
 - https://github.com/itaysk/kubectl-neat
 - https://github.com/johanhaleby/kubetail
+
+- `~/.config/zoomus.conf`
+- `~/.local/share/applications`
